# Engine

./: .gitmodules  CMakeLists.txt  Issues.json  ReadMe  Tasks.json
Application/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  CMakeLists.txt  IMainWindow.hpp  IPlayable.hpp  MainWindow.cpp  MainWindow.hpp  TestPlayer.cpp  TestPlayer.hpp  main.cpp
Application/Action/: Action.cpp  Action.hpp  ActionMap.hpp  ActionTarget.hpp
Application/Animations/: Anim_Base.cpp  Anim_Base.hpp  Anim_Directional.cpp  Anim_Directional.hpp  Animation.cpp  Animation.hpp  DIrection.hpp  SpriteSheet.cpp  SpriteSheet.hpp
Application/Components/: AnimationSystem.cpp  AnimationSystem.hpp  CollisionComponent.cpp  CollisionComponent.hpp  CollisionSystem.cpp  CollisionSystem.hpp  Component.cpp  Component.hpp  ComponentCreator.cpp  ComponentCreator.hpp  ControllerComponent.cpp  ControllerComponent.hpp  ControllerSystem.cpp  ControllerSystem.hpp  DrawableComponent.cpp  DrawableComponent.hpp  EntitiesManager.cpp  EntitiesManager.hpp  EntityMessages.hpp  EventQueue.hpp  MessageHandler.cpp  MessageHandler.hpp  MovableComponent.cpp  MovableComponent.hpp  MovementSystem.cpp  MovementSystem.hpp  PositionComp.cpp  PositionComp.hpp  RendererSystem.cpp  RendererSystem.hpp  SpriteSheetComponent.cpp  SpriteSheetComponent.hpp  StateComponent.cpp  StateComponent.hpp  StateSystem.cpp  StateSystem.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp
Application/Configuration/: Configuration.cpp  Configuration.hpp  IConfiguration.hpp  ResourceManager.hpp
Application/Entity/: Character.cpp  Character.hpp  Colision.hpp  Enemy.cpp  Enemy.hpp  EntityBase.cpp  EntityBase.hpp  EntityManager.cpp  EntityManager.hpp  Player.cpp  Player.hpp
Application/NewMap/: IsoTiles.hpp  Tile.cpp  Tile.hpp  TileSet.cpp  TileSet.hpp
Application/Test/: Engine_classes.hpp  testing.cpp  testing.hpp
Application/Utility/: ActionFunctinoid.hpp  BaseState.hpp  EventDetails.hpp  EventManager.cpp  EventManager.hpp  Game.cpp  Game.hpp  SharedContext.hpp  StateManager.cpp  StateManager.hpp  State_Game.cpp  State_Game.hpp  State_Intro.cpp  State_Intro.hpp  State_MainMenu.cpp  State_MainMenu.hpp  State_Paused.cpp  State_Paused.hpp  Window.cpp  Window.hpp
Application/Utility/Map/: Background.cpp  Background.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp  TileSet.cpp  TileSet.hpp
Application/media/: Player.cfg  Player.json  keys.json  map.json  tiles.json
Application/media/Json/: EnemyList.json  GreenGuy_Animations.json  GreenGuy_Char.json  IsometricTiles.json  Knight_Animations.json  Knight_Char.json  LayeredMap.json  Rat_Animations.json  Rat_Char.json  Slime_Animations.json  Slime_Char.json  SnakeLogan_Animations.json  Snake_Char.json  keys.json  map.json
Common/: CMakeLists.txt
Common/Animations/: Anim_Base.cpp  Anim_Base.hpp  Anim_Directional.cpp  Anim_Directional.hpp  AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  AnimationTypes.hpp  SpriteSheet.cpp  SpriteSheet.hpp  SpriteSheetTemplate.hpp
Common/CommonHeaders/: AnimationTypes.hpp  AnimationsToBoolConverter.cpp  AnimationsToBoolConverter.hpp  AnimationsToStateConverter.cpp  AnimationsToStateConverter.hpp  ComponentType.hpp  Direction.hpp  EntityState.hpp  MapStructs.hpp  SharedContext.cpp  SharedContext.hpp  Vector2i_hash.hpp
Common/Components/: CollidableComponent.cpp  CollidableComponent.hpp  Component.cpp  Component.hpp  ControllerComponent.cpp  ControllerComponent.hpp  DrawableComponentInterface.hpp  JumpComponent.cpp  JumpComponent.hpp  MovableComponent.cpp  MovableComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  SpriteSheetComponent.cpp  SpriteSheetComponent.hpp  SpriteSheetComponent.tpp  StateComponent.cpp  StateComponent.hpp
Common/Configuration/: Configuration.cpp  Configuration.hpp  ResourceManager.hpp
Common/Entities/: Character.cpp  Character.hpp  Enemy.cpp  EntityActions.cpp  EntityActions.hpp  EntityBase.cpp  EntityBase.hpp  EntityManager.cpp  EntityManager.hpp  Player.cpp  Player.hpp
Common/EntitiesManager/: EntitiesManager.cpp  EntitiesManager.hpp
Common/Game/: Game.cpp  Game.hpp
Common/InfoBox/: InfoBox.cpp  InfoBox.hpp
Common/Map/: CMakeLists.txt  IsoTiles.hpp  KnightTiles.hpp  LayeredMap.cpp  LayeredMap.hpp  LayeredMapTemplate.hpp  MapLayerFactory.cpp  MapLayerFactory.hpp  MapLayerInterface.hpp  MapLayerTemplate.hpp  Tile.cpp  Tile.hpp  TileSetFactory.cpp  TileSetFactory.hpp  TileSetInterface.hpp  TileSetTemplate.hpp  TileTemplate.hpp
Common/StateManager/: StateManager.cpp  StateManager.hpp  State_Game.cpp  State_Game.hpp
Common/Systems/: CollisionSystem.cpp  CollisionSystem.hpp  Communicator.cpp  Communicator.hpp  ControllerSystem.cpp  ControllerSystem.hpp  EntityEvent.hpp  EventQueue.hpp  JumpSystem.cpp  JumpSystem.hpp  Message.hpp  MessageHandler.cpp  MessageHandler.hpp  MovementSystem.cpp  MovementSystem.hpp  Observer.hpp  RendererSystem.cpp  RendererSystem.hpp  SpriteSheetSystem.cpp  SpriteSheetSystem.hpp  StateSystem.cpp  StateSystem.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp
Common/Window/: EventManager.cpp  EventManager.hpp  Window.hpp
Game/: CMakeLists.txt  Game.hpp
Map/: Tile.hpp  (+1 more)
MapEditor/: CMakeLists.txt  FileReader.cpp  FileReader.hpp  main.cpp
MapEditor/InputFiles/: layer1.txt  layer2.txt  map_layer1_data.json  type1.txt  type2.txt  type3.txt  type4.txt  type5.txt  type6.txt  type7.txt  type8.txt  type9.txt
MapEditor/OutputFiles/: map_layer.json  map_layer1.json
TestApp/: CMakeLists.txt  main.cpp  test_headers.hpp  testing_libs.cpp  testing_libs.hpp
TestApp/TestClasses/: Hero.cpp  Hero.hpp
Tests/: CMakeLists.txt  ConfigurationTests.cpp
Tests/AnimationsTests/: AnimationsTests.cpp
Tests/ComponentsTests/: ComponentsTests.cpp
Tests/EntitiesTests/: EntitiesTests.cpp
Tests/MapTests/: MapTests.cpp
Tests/StateManagerTests/: StateManagerTests.cpp
Tests/SystemsTests/: ControllerSystemTests.cpp  MovementSystemTests.cpp  RendererSystemTests.cpp  SpriteSheetSystemTests.cpp  StateSystemTests.cpp  SystemManagerTests.cpp
(+41 files in other folders)
